examples/errors/header/invalid_meter.abc
X:1
T:Invalid Meter
M:allegro
K:C
% H005: Invalid meter value
CDEF|
